<resources>
    <string name="app_name">BackgroundPlayer</string>
    <string name="video_button_label">video</string>
    <string name="web_page_button_label">web page</string>
    <string name="pick_button_label">pick file</string>
    <string name="play_from_url_button_label">play from url</string>
    <string name="url_input_hint">http://media.developer.dolby.com/Atmos/MP4/Universe_Fury2.mp4</string>
    <string name="open_url_button_label">open url</string>
    <string name="web_page_url_input_hint">https://www.google.com</string>
    <string name="web_page_radio_button_label">web page</string>
    <string name="video_radio_button_label">video</string>
    <string name="images_radio_button_label">images</string>
    <string name="your_video_url_edit_text_hint">your video path</string>
    <string name="your_web_page_url_edit_text_hint">your web page url</string>
    <string name="pick_images_button_label">pick images</string>
    <string name="password_input_hint">password</string>
    <string name="confirm_button_label">confirm</string>
    <string name="settings_radio_button_label">settings</string>
    <string name="new_password_input_hint">new password</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="cancel_button_label">cancel</string>
    <string name="locked_out_time_label">10 min 0 s</string>
    <string name="display_time_input_hint">display time</string>
    <string name="new_configuration_code_input_hint">new configuration code</string>
    <string name="pick_video_button_text">pick video</string>
    <string name="fill_screen_switch_text">fill screen</string>
    <string name="new_code_hint">new code</string>
    <string name="new_password_hint">new password</string>
</resources>