<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/popup_background"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id = "@+id/are_you_sure_text_view"
        android:text = "@string/are_you_sure"
        android:textSize = "35sp"
        app:layout_constraintStart_toStartOf = "parent"
        app:layout_constraintEnd_toEndOf = "parent"
        app:layout_constraintTop_toTopOf = "parent"
        app:layout_constraintBottom_toTopOf = "@id/confirm_button"
        android:layout_margin="50dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id = "@+id/confirm_button"
        android:layout_marginBottom="25dp"
        android:text="@string/confirm_button_label"
        app:layout_constraintTop_toBottomOf="@id/are_you_sure_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cancel_button"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id = "@+id/cancel_button"
        app:layout_constraintTop_toTopOf="@id/confirm_button"
        app:layout_constraintStart_toEndOf="@id/confirm_button"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/cancel_button_label"
        app:layout_constraintBottom_toBottomOf="@id/confirm_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>